--- a/app/assets/stylesheets/ducats.scss
+++ b/app/assets/stylesheets/ducats.scss
@@ -1,10 +1,10 @@
 .ducats-container {
 
   .ducat-buttons-container {
-    padding: 1rem !important;
+    padding: 13px !important;
     margin: 1.5rem 0px;
     margin-top: 0;
-    border-radius: 0.2rem !important;
+    border-bottom: 1px solid black;
     @extend .flex-center-all;
     @extend .light-blue-bg;
   }
