--- a/app/views/ducats/index.slim
+++ b/app/views/ducats/index.slim
@@ -2,21 +2,21 @@
 
 .ducats-container
   h5 = t('ducat.current_count', count: @ducat_count).html_safe
-
   .row
     .col-md-6
-      table.datatable style='width: 100%;'
-        thead
-          tr
-            th = 'Status'
-            th = 'Naslov'
-            th = 'Datum plaćanja'
-        tbody
-          - Purchase.for_user(current_user).each do |p|
-            tr
-              td = t("purchase.statuses.#{p.status}")
-              td = p.title
-              td = p.formatted_date(:created_at)
+      = render 'shared/datatable', datatable_class: PurchaseDatatable
+      / table.datatable style='width: 100%;'
+      /   thead
+      /     tr
+      /       th = 'Status'
+      /       th = 'Naslov'
+      /       th = 'Datum plaćanja'
+      /   tbody
+      /     - Purchase.for_user(current_user).each do |p|
+      /       tr
+      /         td = t("purchase.statuses.#{p.status}")
+      /         td = p.title
+      /         td = p.formatted_date(:created_at)
     .col-md-6
       .ducat-buttons-container
         = colapse_button(t('ducat.what_are_ducats'), 'mr-5', 'ducats-about-container')
