--- a/app/views/posts/_availability_form.slim
+++ b/app/views/posts/_availability_form.slim
@@ -1,4 +1,4 @@
-= simple_form_for @reservation, url: confirm_reservations_path, method: :post do |f|
+= simple_form_for @reservation, url: new_reservations_path, method: :get do |f|
   .row
     .col-md-12
       .availability-from
