--- a/app/views/ducats/index.slim
+++ b/app/views/ducats/index.slim
@@ -25,7 +25,7 @@
       .ducats-about-container.collapse
         .row
           .col-md-6
-            p = 'Dukati su virtuelna valuta unutar Vozilice. Pomocu njih mozete vrsiti potvrdu rezervacija i izdvajanje vozila na naslovnoj stranici. Vrijednost jednog dukata je 1 KM. Ako uzmete vece kolicine štedite i do 50%.'
+            p.info = 'Dukati su virtuelna valuta unutar Vozilice. Pomocu njih mozete vrsiti potvrdu rezervacija i izdvajanje vozila na naslovnoj stranici. Vrijednost jednog dukata je 1 KM. Ako uzmete vece kolicine štedite i do 50%.'
           .col-md-6.text-center
             = image_tag image_url('coins.png'), style: 'height: 150px;'
       .ducat-info-container.buy data-target=".payment-gateway-container" data-toggle="collapse" aria-expanded="false"
